# weekend-ui

./: Age_label_encoder.joblib  BMI Category_label_encoder.joblib  Blood Pressure_label_encoder.joblib  Daily Steps_label_encoder.joblib  Dockerfile  Gender_label_encoder_xgb.joblib  Heart Disease Data.ipynb  Heart Disease Prediction Model Multi Diseases.ipynb  Heart Rate_label_encoder.joblib  Main_Page.py  README.md  Simple_Model_Using_Kaggle.ipynb  Sleep Duration_label_encoder_xgb.joblib  WeenendIm.ipynb  app.py  model.joblib  pyproject.toml  sleep_disorder_label_encoder_xgb.joblib  xgb_model.json  xgb_model2.json  xgb_sleep_model.json  xgb_sleep_scaler.joblib
.history/: Main_Page_20240421084405.py  Main_Page_20240421084418.py  Main_Page_20240421085805.py  Main_Page_20240421085832.py  Main_Page_20240421085834.py  Main_Page_20240421090049.py  Main_Page_20240421090051.py  Main_Page_20240421092645.py  Main_Page_20240421092753.py  Main_Page_20240421092854.py  Main_Page_20240421092934.py  Main_Page_20240421092941.py  Main_Page_20240421093018.py  Main_Page_20240421100958.py  README_20240421082812.md  README_20240421082820.md  README_20240421083132.md  README_20240421083146.md  README_20240421083156.md  README_20240421083301.md
.history/pages/: 2_Data_Visualization_20240420192909.py  2_Data_Visualization_20240421084654.py  2_Data_Visualization_20240421084700.py  2_Data_Visualization_20240421084713.py  2_Data_Visualization_20240421084729.py  2_Data_Visualization_20240421084916.py  (+114 more)
pages/: 2_Data_Visualization.py  3_Prediction.py  3_Sleep_Visualization.py  4_Prediction.py
